package streamingServiceLogik;

public abstract class Media {
}
