package streamingServiceLogik;

public class Menu {
}
