package streamingServiceLogik;

public class Movie {
}
