package streamingServiceLogik;

public class Series {
}
