package streamingServiceLogik;

public class StreamingService {
}
