package streamingServiceLogik;

public class User {
}
