package utilityClasses;

public class Userinput {
}
