@startuml
'https://plantuml.com/sequence-diagram




'==Variabler og methods===

class User{
- username : String
- password : String
- savedMedia : list<Media>
- watchedMovie : list<Media>


+ void addWatchedMedia(Media Media)
+ void addSavedMedia(Media Media)
+ void removeSavedMedia(Media Media)
+ ArrayList<Media> getWatchedMedia()
+ ArrayList<Media> getSavedMedia()

}

abstract class Media{
# String title
# ArrayList<Enum category> categories
# int releaseYear
# double rating
# Enum category

+ String toString()
+ void play()


}

class Main

class Movie{


}

class Series{
-int Season
-int Episode

}


enum Category
class StreamingService{
# ArrayList<User> users
# ArrayList<Media> mediaList
- Menu menu

+ void showMenu()
+ void loginUser()
+ void registerUser()


}
class FileHandler <<utility>> {

+ void readFiles(File csvfile)
+ void saveFiles(File csvfile)

+ void parseLogin(ArrayList<String>)

+ void parseMovies(ArrayList<String>)

+ void parseSeries((ArrayList<String>)


}


class UserInput <<utility>>{


+String promptUserString(String message)
+int promptUserInt(String message)

}
class Menu{
+User currentUser

- void printSelectedMedia(ArrayList<Media>)
+ ArrayList<Media> searchMedia(String input)
+ ArrayList<Media> sortByCategories(Enum category)
+ void printWatchedMedia(User user)
+ void printSavedMedia(User user)
+ void selectMediaToPlay(int mediaIndex)

}


'==ARV===

User *-- FileHandler
StreamingService *-- FileHandler

Menu *-- Media

Main --> StreamingService

StreamingService *--- UserInput
StreamingService *-- Media
StreamingService *-- Menu
StreamingService *-- User


Media <|-- Movie
Media <|-- Series
Media *-- Category



@enduml